[package]
name = "kf2-vpn-checker"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.21", features = ["json"] }
error-chain = "0.12.4"
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0.107"
scraper = "0.17.1"
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
structopt = "0.3.26"
futures = "0.3.28"
maplit = "1.0.2"