[package]
name = "kf2-vpn-checker"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.21", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0.107"
scraper = "0.17.1"
serde = { version = "1.0.188", features = ["derive"] }
structopt = "0.3.26"
maplit = "1.0.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
clap = { version = "4.4.6", features = ["cargo"] }
eyre = "0.6.8"
